bk_ida/gccida/g3/ix86_memory_move_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_memory_move_cost/src/i386.c:12886:29: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_memory_move_cost( machine_mode mode, reg_class a2, int in) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_memory_move_cost/src/i386.c:12886:48: error: must use 'enum' tag to refer to type 'reg_class'
int  ix86_memory_move_cost( machine_mode mode, reg_class a2, int in) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_memory_move_cost/src/i386.c:12898:6: error: use of undeclared identifier 'CSWTCH_1605'
v6 = CSWTCH_1605[v4]; 
     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_memory_move_cost/src/obj/i386.o] Error 1
